# kinect_imu_tracking

./: .gitignore  stack.xml
kinect_ir_imu_fusion/: .gitignore  mainpage.dox  manifest.xml
kinect_ir_imu_fusion/launch/: kinect_ir_imu_fusion.launch
kinect_ir_imu_fusion/scripts/: kinect_ir_imu_board.py  kinect_ir_imu_fusion.py  yaw_align.sh
kinect_ir_tracking/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
kinect_ir_tracking/src/: kinect_ir_node_cv.cpp  kinect_ir_node_gl.cpp
razor_imu_pkg/: .gitignore  mainpage.dox  manifest.xml
razor_imu_pkg/bash/: align.sh
razor_imu_pkg/scripts/: razor_imu_gui.py  razor_imu_node.py
razor_imu_pkg/src/razor_imu_pkg/srv/: __init__.py  _imu_cmd.py
razor_imu_pkg/srv/: imu_cmd.srv
